@@ -93,6 +93,10 @@ preload_comment: true
 ## false: 当点击评论条等区域时再加载评论模块
 ## false: load comment's section until u click/hover on the bar/icon
 
+show_count: true
+## 是否在主页文章标题旁显示评论数（多说、Disqus）
+## Add comment count after article title
+
 disqus:
   #on: true
   shortname:
@@ -190,6 +194,7 @@ friends:
   Love live!: http://www.targetlocked.xyz
   Menci: https://blog.menci.moe
   Netcan: http://www.netcan666.com
+  NJLYF2011: http://www.njlyf2011.cn
   Shy泠的博客: https://shyling.com
   Sonico's Home: http://blog.supvesonico.moe
   xw_y_am's blog: http://web.xwyam.info/blog
