@@ -58,7 +58,7 @@ date: 2016-02-17 15:09:40
   * 开心地工作：(￣▽￣")
   * 下班回窝后：( ˊ\_>ˋ)
   * 地铁上：( ＿ ＿)ノ｜
-  * 被晒妹：(\*・・\*)
+  * 被晒妹：Σ( ° △ °|||)︴
   * 其他不开心的表情就不放了，因为真的不好看
 
 另外，你可以在此留言。
