@@ -1,3 +1,7 @@
+v2016-06-27
+  * Modify "友情链接"
+  * Update themes
+
 v2016-06-25.2
   * Update README.md
 
